# search-data-explorer

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: tests.yml
dashboard/: __init__.py  dashboard.py
examples/: browsing_data.py  passing_data.py  path2file.py
optimization_dashboards/: __init__.py  dashboards.py  ltm_wrapper.py  streamlit_run.py
optimization_dashboards/streamlit_elements/: __init__.py  streamlit_setup.py  streamlit_sidebar.py  streamlit_widgets.py
optimization_dashboards/streamlit_elements/pandas_filters/: __init__.py  filters.py
optimization_dashboards/streamlit_elements/streamlit_plots/: __init__.py  plotly_plots.py
requirements/: requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
search_data_explorer/: __init__.py  cli.py  search_data_explorer.py  streamlit_run.py
search_data_explorer/tde_streamlit/: app.py  widgets.py
search_data_explorer/tde_streamlit/plots/: plots.py
src/search_data_explorer/: __init__.py  cli.py  search_data_explorer.py  streamlit_run.py
src/search_data_explorer/tde_streamlit/: app.py  elements.py
tabular_data_explorer/: __init__.py  read_search_data.py  streamlit_run.py  streamlit_setup.py  tabular_data_explorer.py  widgets.py
tabular_data_explorer/streamlit_elements/: __init__.py  pandas_filters.py  streamlit_plots.py  streamlit_setup.py  streamlit_sidebar.py  streamlit_widgets.py  toc.py
tabular_data_explorer/tde_streamlit/: __init__.py  app.py  elements.py  widgets.py
tests/: run_sde.py  test_stuff.py
(+9 files in other folders)
